主要頁面的rwd完成，部分區塊還需微調，分眾分頁跟彈窗rwd還沒處理

--- a/advanced-course.html
+++ b/advanced-course.html
@@ -170,7 +170,7 @@
         <section class="title-area orange">
             <div class="container">
                 <div class="row">
-                    <div class="col-8 reveal-item">
+                    <div class="col-sm-12 col-md-12 col-8 reveal-item">
                         <span class="h1-eg-medium">Advanced Course</span>
                         <h1 class="h1-ch">研究與進修專區</h1>
                         <div class="bread">
@@ -181,7 +181,7 @@
                             <span class="orange p2">研究與進修專區</span>
                         </div>
                     </div>
-                    <div class="col-4">
+                    <div class="col-sm-12 col-md-12 col-4">
                         <div class="text-overlay reveal-fadein">
                             <h5 class="h5-ch-medium">為想持續成長的您而打造</h5>
                             <div class="line"></div>
@@ -190,24 +190,24 @@
                     </div>
                 </div>
             </div>
-            <img src="images/bg/tour-guide-orange01.png" alt="tour-guide-orange">
+            <img src="images/bg/tour-guide-orange01-1.png" alt="tour-guide-orange" class="tour-guide-orange-bg">
         </section>
     </header>
     <main>
         <section class="label">
+            <img src="images/bg/tour-guide-orange01-2.png" alt="tour-guide-orange" class="tour-guide-orange-bg">
             <div class="container">
                 <div class="row">
-                    <div class="col-12">
-                        <div class="label-btn orange active reveal-item"><span class="material-symbols-outlined">book_3</span>好書推薦</div>
-                        <div class="label-btn orange reveal-item"><span class="material-symbols-outlined">local_activity</span>論文期刊</div>
-                        <div class="label-btn orange reveal-item"><span class="material-symbols-outlined">child_hat</span>職場理財</div>
-                        <div class="label-btn orange reveal-item"><span class="material-symbols-outlined">emoji_objects</span>研習課程</div>
-                    </div>
+                    <div class="label-btn orange active reveal-item"><span class="material-symbols-outlined">book_3</span>好書推薦</div>
+                    <div class="label-btn orange reveal-item"><span class="material-symbols-outlined">local_activity</span>論文期刊</div>
+                    <div class="label-btn orange reveal-item"><span class="material-symbols-outlined">child_hat</span>職場理財</div>
+                    <div class="label-btn orange reveal-item"><span class="material-symbols-outlined">emoji_objects</span>研習課程</div>
                 </div>
             </div>
         </section>
 
         <section class="content-wrapper">
+            <img src="images/bg/tour-guide-orange01-3.png" alt="tour-guide-orange" class="tour-guide-orange-bg">
             <!-- 頁面一 好書推薦 -->
             <div class="container outer-frame orange good-books">
                 <div class="row">
@@ -221,7 +221,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-3 books-list reveal-item">
+                    <div class="col-md-6 col-lg-4 col-3 books-list reveal-item">
                         <img src="images/books/advanced-course-books01.png" alt="advanced-course-books01">
                         <div class="detail">
                             <div class="green-tag">
@@ -234,7 +234,7 @@
                             <a href=""><p class="bookname p1" title="我與世界格格不入：成人的亞斯覺醒">我與世界格格不入：成人的亞斯覺醒</p></a>
                         </div>
                     </div>
-                    <div class="col-3 books-list reveal-item">
+                    <div class="col-md-6 col-lg-4 col-3 books-list reveal-item">
                         <img src="images/books/advanced-course-books02.png" alt="advanced-course-books02">
                         <div class="detail">
                             <div class="green-tag">
@@ -247,7 +247,7 @@
                             <a href=""><p class="bookname p1" title="廚房裡的偽科學： 你以為的健康飲食法，都是食物世界裡的胡說八道">廚房裡的偽科學： 你以為的健康飲食法，都是食物世界裡的胡說八道</p></a>
                         </div>
                     </div>
-                    <div class="col-3 books-list reveal-item">
+                    <div class="col-md-6 col-lg-4 col-3 books-list reveal-item">
                         <img src="images/books/advanced-course-books03.png" alt="advanced-course-books03">
                         <div class="detail">
                             <div class="green-tag">
@@ -260,7 +260,7 @@
                             <a href=""><p class="bookname p1" title="從噁心到同理">從噁心到同理</p></a>
                         </div>
                     </div>
-                    <div class="col-3 books-list reveal-item">
+                    <div class="col-md-6 col-lg-4 col-3 books-list reveal-item">
                         <img src="images/books/advanced-course-books04.png" alt="advanced-course-books04">
                         <div class="detail">
                             <div class="green-tag">
@@ -275,7 +275,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-3 books-list reveal-item">
+                    <div class="col-md-6 col-lg-4 col-3 books-list reveal-item">
                         <img src="images/books/advanced-course-books05.png" alt="advanced-course-books05">
                         <div class="detail">
                             <div class="green-tag">
@@ -288,7 +288,7 @@
                             <a href=""><p class="bookname p1" title="職場厚黑學 : 65個不可不防的職場陷阱">職場厚黑學 : 65個不可不防的職場陷阱</p></a>
                         </div>
                     </div>
-                    <div class="col-3 books-list reveal-item">
+                    <div class="col-md-6 col-lg-4 col-3 books-list reveal-item">
                         <img src="images/books/advanced-course-books06.png" alt="advanced-course-books06">
                         <div class="detail">
                             <div class="green-tag">
@@ -301,7 +301,7 @@
                             <a href=""><p class="bookname p1" title="這份工作，你真的想做一輩子嗎？最勵志的轉職指引，讓你的職涯下半場更加閃亮">這份工作，你真的想做一輩子嗎？最勵志的轉職指引，讓你的職涯下半場更加閃亮</p></a>
                         </div>
                     </div>
-                    <div class="col-3 books-list reveal-item">
+                    <div class="col-md-6 col-lg-4 col-3 books-list reveal-item">
                         <img src="images/books/advanced-course-books07.png" alt="advanced-course-books07">
                         <div class="detail">
                             <div class="green-tag">
@@ -314,7 +314,7 @@
                             <a href=""><p class="bookname p1" title="聽20位科學家說故事 : 站在偉人的肩上看世界">聽20位科學家說故事 : 站在偉人的肩上看世界</p></a>
                         </div>
                     </div>
-                    <div class="col-3 books-list reveal-item">
+                    <div class="col-md-6 col-lg-4 col-3 books-list reveal-item">
                         <img src="images/books/advanced-course-books08.png" alt="advanced-course-books08">
                         <div class="detail">
                             <div class="green-tag">
@@ -329,7 +329,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-12 page-btn orange reveal-fadein">
+                    <div class="col-12 page-btn orange">
                         <span class="btn-sm active">1</span>
                         <span class="btn-sm">2</span>
                         <span class="btn-sm">3</span>
@@ -897,7 +897,6 @@
                     </div>
                 </div>
             </div>
-            <img src="images/bg/tour-guide-orange02.png" alt="tour-guide-orange">
         </section>
     </main>
     <footer>
