--- a/books-detail.html
+++ b/books-detail.html
@@ -170,7 +170,7 @@
     </header>
     <main>
         <section class="book-info">
-            <img src="images/bg/books-bg1.png" alt="books-bg1" class="bg">
+            <img src="images/bg/books-bg1.png" alt="books-bg1" class="books-detail-bg">
             <div class="container">
                 <div class="bread">
                     <span class="green p2"><a href="index.html">首頁</a></span>
@@ -182,14 +182,14 @@
                     <span class="green p2">詳細資料頁</span>
                 </div>
                 <div class="row">
-                    <div class="col-2">
-                        <img src="images/books/books01.png" alt="books01">
+                    <div class="col-md-12 col-lg-3 col-2">
+                        <img src="images/books/books01.png" alt="books01" class="books01">
                         <button class="collect">
                             <i class="fa-solid fa-heart"></i>
                             <span class="p2">加入收藏</span>
                         </button>
                     </div>
-                    <div class="col-10">
+                    <div class="col-md-12 col-lg-9 col-10">
                         <div class="content">
                             <h1 class="h3-ch">HTML / CSS / JavaScript與前端框架完美結合 : 使用Bootstrap與PWA技術, 新手從這開始!</h1>
                             <div class="basic-detail">
@@ -237,7 +237,7 @@
                                 <tr class="p2">
                                     <th></th>
                                     <th>館藏地/室</th>
-                                    <th>特藏/用途</th>
+                                    <th>用途</th>
                                     <th>索書號</th>
                                     <th>狀態/到期日</th>
                                     <th>附件</th>
@@ -287,7 +287,7 @@
                         <div class="content">
                             <h5 class="h5-ch">鄰近書櫃的書</h5>
                             <div class="row">
-                                <div class="col-4 books-list">
+                                <div class="col-sm-12 col-md-6 col-4 books-list">
                                     <img src="images/books/books02.png" alt="books02">
                                     <div class="detail">
                                         <div class="green-tag">
@@ -300,7 +300,7 @@
                                         <a href=""><p class="bookname p1" title="原生全端開發 : 使用Node.js建立最漂亮強大的網站">原生全端開發 : 使用Node.js建立最漂亮強大的網站</p></a>
                                     </div>
                                 </div>
-                                <div class="col-4 books-list">
+                                <div class="col-md-6 col-4 books-list">
                                     <img src="images/books/books03.png" alt="books03">
                                     <div class="detail">
                                         <div class="green-tag">
@@ -332,12 +332,12 @@
                 </div>
                 <div class="btn-group">
                     <a href="#" class="big-btn line btn-mid left"><span class="material-symbols-rounded">arrow_left_alt</span>上一本書目</a>
-                    <a href="search.html" class="big-btn btn-mid">返回書目列表</a>
+                    <!-- <a href="search.html" class="big-btn btn-mid">返回書目列表</a> -->
                     <a href="#" class="big-btn line btn-mid right">下一本書目<span class="material-symbols-outlined">arrow_right_alt</span></a>
                 </div>
                 
             </div>
-            <img src="images/bg/books-bg2.png" alt="books-bg2" class="bg">
+            <img src="images/bg/books-bg2.png" alt="books-bg2" class="books-detail-bg">
         </section>
         
     </main>
