--- a/contact.html
+++ b/contact.html
@@ -168,10 +168,10 @@
                     </div>
                 </div>
         </section>
-        <section class="title-area green">
+        <section class="title-area green contact-page">
             <div class="container">
                 <div class="row">
-                    <div class="col-8 reveal-item">
+                    <div class="col-md-12 col-8 reveal-item">
                         <span class="h1-eg-medium">Contact Us</span>
                         <h1 class="h1-ch">聯絡我們</h1>
                         <div class="bread">
@@ -182,26 +182,28 @@
                     </div>
                 </div>
             </div>
-            <img src="images/bg/about-bg1.png" alt="about-bg1">
+            <img src="images/bg/about-bg1.png" alt="about-bg1" class="contact-bg">
+            <img src="images/bg/about-bg1-w440.png" alt="about-bg1-w440" class="contact-bg2">
         </section>
     </header>
     <main>
         <section class="contact">
+            <img src="images/bg/contact-bg2.png" alt="contact-bg2" class="contact-bg">
             <div class="container">
                 <div class="row reveal-fadein">
-                    <div class="col-4">
+                    <div class="col-sm-12 col-4">
                         <div class="card">
                             <h5 class="btn-lg-blod">公共圖書館</h5>
                             <p class="p1">新竹縣竹北市智惠街888號</p>
                         </div>
                     </div>
-                    <div class="col-4">
+                    <div class="col-sm-12 col-4">
                         <div class="card">
                             <h5 class="btn-lg-blod">服務台專線電話</h5>
                             <p class="p1">03-666-8888#275、276</p>
                         </div>
                     </div>
-                    <div class="col-4">
+                    <div class="col-sm-12 col-4">
                         <div class="card">
                             <h5 class="btn-lg-blod">我們的社群網站</h5>
                             <p class="p1">
@@ -209,34 +211,33 @@
                                 <i class="fa-brands fa-instagram"></i>
                             </p>
                         </div>
-                        
                     </div>
                 </div>
             </div>
-            
         </section>
         <section class="traffic">
+            <img src="images/bg/contact-bg3.png" alt="contact-bg3" class="contact-bg">
             <div class="container">
                 <div class="title reveal-left">
                     <span class="h2-eg">Traffic Information</span>
                     <h2 class="h2-ch">交通資訊</h2>
                 </div>
                 <div class="row">
-                    <div class="col-4">
+                    <div class="col-md-12 col-4">
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d57944.27732727182!2d120.94525934291366!3d24.811975955115955!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x346836ec9c1437d3%3A0x192e196a11675dd!2z5paw56u557ij5paH5YyW5bGA5ZyW5pu46aSo!5e0!3m2!1szh-TW!2stw!4v1763203414483!5m2!1szh-TW!2stw" width="600" height="510" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="reveal-fadein"></iframe>
                     </div>
                     <div class="col-1"></div>
-                    <div class="col-6 text reveal-right">
+                    <div class="col-md-10 col-6 text reveal-right">
                         <div>
-                            <h5 class="h5-ch">自行開車</h5>
+                            <p class="p1">自行開車</p>
                             <p>若行走北二高（福爾摩沙高速公路)，請於竹林交流道下，往竹北芎林方向約六公里路程，即可到達竹北。若行走省道台一線，請於竹北光明六路往縣政府方向行駛，遇縣政九路（台銀.家樂福交叉口)左轉即可到達。若行走一高（中山高速公路），請於竹北交流道下，至文化局即可，路程約5分鐘。</p>
                         </div>
                         <div>
-                            <h5 class="h5-ch">搭乘公車</h5>
+                            <p class="p1">搭乘公車</p>
                             <p>自新竹市搭乘新竹客運往芎林方向車次，於光明六路縣府路口下車，步行至文化局，路程約5分鐘。自新竹市搭乘新竹客運往新埔或中壢方向，於竹北地政事務所下車，步行至文化局，路程約10分鐘。</p>
                         </div>
                         <div>
-                            <h5 class="h5-ch">搭乘火車</h5>
+                            <p class="p1">搭乘火車</p>
                             <p>搭乘火車於竹北火車站下車，搭乘『科技之星5900』至家樂福站，步行至文化局約10分鐘。</p>
                         </div>
                     </div>
