--- a/index.html
+++ b/index.html
@@ -482,10 +482,16 @@
                                         <span class="date strong-number-lg-blod">12.07</span>
                                         <span class="time p1">10:00-12:00</span>
                                     </div>
+                                    <!-- rwd-w440 -->
+                                    <div class="day2">
+                                        <span class="date strong-number-lg-blod">12.07</span>
+                                        <span class="week strong-number-sm-blod">六</span>
+                                        <span class="time p2">10:00-12:00</span>
+                                    </div>
                                     <div class="content">
                                         <div class="activity-name">
                                             <h2 class="h2-ch-medium">小小建築師樂高設計工坊</h2>
-                                            <p class="h5-ch">利用樂高積木，讓孩子們發揮想像力，設計一座夢想中的城市空間</p>
+                                            <p class="p1">利用樂高積木，讓孩子們發揮想像力，設計一座夢想中的城市空間</p>
                                             <div class="sign-up">
                                                 <p class="p2">報名時間</p>
                                                 <p class="btn-sm">2025.
@@ -509,10 +515,16 @@
                                         <span class="date strong-number-lg-blod">12.21</span>
                                         <span class="time p1">14:00-17:00</span>
                                     </div>
+                                    <!-- rwd-w440 -->
+                                    <div class="day2">
+                                        <span class="date strong-number-lg-blod">12.21</span>
+                                        <span class="week strong-number-sm-blod">六</span>
+                                        <span class="time p1">14:00-17:00</span>
+                                    </div>
                                     <div class="content">
                                         <div class="activity-name">
                                             <h2 class="h2-ch-medium">節慶花藝：聖誕乾燥花圈 DIY</h2>
-                                            <p class="h5-ch">親手製作獨特的聖誕花圈，感受節慶氣氛，培養手作樂趣</p>
+                                            <p class="p1">親手製作獨特的聖誕花圈，感受節慶氣氛，培養手作樂趣</p>
                                             <div class="sign-up">
                                                 <p class="p2">報名時間</p>
                                                 <p class="btn-sm">2025.
@@ -534,12 +546,18 @@
                                     <div class="day">
                                         <span class="week strong-number-sm-blod">六</span>
                                         <span class="date strong-number-lg-blod">01.04</span>
-                                        <span class="time p1">09:00–12:00</span>
+                                        <span class="time p1">9:00–12:00</span>
+                                    </div>
+                                    <!-- rwd-w440 -->
+                                    <div class="day2">
+                                        <span class="date strong-number-lg-blod">01.04</span>
+                                        <span class="week strong-number-sm-blod">六</span>
+                                        <span class="time p1">9:00–12:00</span>
                                     </div>
                                     <div class="content">
                                         <div class="activity-name">
                                             <h2 class="h2-ch-medium">高中生程式設計基礎工作坊</h2>
-                                            <p class="h5-ch">教授 Python 語言基礎，引導高中生瞭解程式設計邏輯，為未來學習打下基礎。</p>
+                                            <p class="p1">教授 Python 語言基礎，引導高中生瞭解程式設計邏輯，為未來學習打下基礎。</p>
                                             <div class="sign-up">
                                                 <p class="p2">報名時間</p>
                                                 <p class="btn-sm">2025.
@@ -656,7 +674,7 @@
                     </div>
                 </div>
                 <div class="col-12 source">
-                    <p>參考資料來源: 博客來:
+                    <p class="p2">參考資料來源: 博客來:
                         http://xn--books-9c3ht2uuqs.com.tw/?srsltid=AfmBOoq2Y_y7kdHy_gMNaupda3pu3Lo6NsjaiSWDwKtxbmgR8aTGuEtt
                         | Pinterest:https://www.pinterest.com/ | 新竹縣公共圖書館官網: https://hcplibrary.hchcc.gov.tw/wSite/mp?mp=1
                     </p>
