--- a/newbooks.html
+++ b/newbooks.html
@@ -169,7 +169,7 @@
         <section class="title-area green">
             <div class="container">
                 <div class="row">
-                    <div class="col-8 reveal-item">
+                    <div class="col-sm-12 col-md-12 col-8 reveal-item">
                         <span class="h1-eg-medium">New Books</span>
                         <h1 class="h1-ch">最新書籍</h1>
                         <div class="bread">
@@ -178,7 +178,7 @@
                             <span class="green p2">最新書籍</span>
                         </div>
                     </div>
-                    <div class="col-4">
+                    <div class="col-sm-12 col-md-12 col-4">
                         <div class="text-overlay reveal-fadein">
                             <h5 class="h5-ch-medium">10月新書</h5>
                             <div class="line"></div>
@@ -209,7 +209,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-3 books-list reveal-item">
+                    <div class="col-md-6 col-lg-4 col-3 books-list reveal-item">
                         <a href=""><img src="images/newbooks/newbooks01.png" alt="newbooks01"></a>
                         <div class="detail">
                             <div class="green-tag">
@@ -223,7 +223,7 @@
                             
                         </div>
                     </div>
-                    <div class="col-3 books-list reveal-item">
+                    <div class="col-md-6 col-lg-4 col-3 books-list reveal-item">
                         <a href=""><img src="images/newbooks/newbooks02.png" alt="newbooks01"></a>
                         <div class="detail">
                             <div class="green-tag">
@@ -236,7 +236,7 @@
                             <a href=""><p class="bookname p1" title="罪惡的終結">罪惡的終結</p></a>
                         </div>
                     </div>
-                    <div class="col-3 books-list reveal-item">
+                    <div class="col-md-6 col-lg-4 col-3 books-list reveal-item">
                         <a href=""><img src="images/newbooks/newbooks03.png" alt="newbooks01"></a>
                         <div class="detail">
                             <div class="green-tag">
@@ -249,7 +249,7 @@
                             <a href=""><p class="bookname p1" title="慢慢活成自己喜歡的樣子：走過十大自我洞察階段，活出豐盛的人生">慢慢活成自己喜歡的樣子：走過十大自我洞察階段，活出豐盛的人生</p></a>
                         </div>
                     </div>
-                    <div class="col-3 books-list reveal-item">
+                    <div class="col-md-6 col-lg-4 col-3 books-list reveal-item">
                         <a href=""><img src="images/newbooks/newbooks04.png" alt="newbooks01"></a>
                         <div class="detail">
                             <div class="green-tag">
@@ -262,9 +262,7 @@
                             <a href=""><p class="bookname p1" title="魔女的原罪">魔女的原罪</p></a>
                         </div>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-3 books-list reveal-item">
+                    <div class="col-md-6 col-lg-4 col-3 books-list reveal-item">
                         <a href=""><img src="images/newbooks/newbooks05.png" alt="newbooks05"></a>
                         <div class="detail">
                             <div class="green-tag">
@@ -277,7 +275,7 @@
                             <a href=""><p class="bookname p1" title="沒有星星的夜晚, 歡迎來到星屑咖啡館">沒有星星的夜晚, 歡迎來到星屑咖啡館</p></a>
                         </div>
                     </div>
-                    <div class="col-3 books-list reveal-item">
+                    <div class="col-md-6 col-lg-4 col-3 books-list reveal-item">
                         <a href=""><img src="images/newbooks/newbooks06.png" alt="newbooks06"></a>
                         <div class="detail">
                             <div class="green-tag">
@@ -290,7 +288,7 @@
                             <a href=""><p class="bookname p1" title="中年不憂鬱">中年不憂鬱</p></a>
                         </div>
                     </div>
-                    <div class="col-3 books-list reveal-item">
+                    <div class="col-md-6 col-lg-4 col-3 books-list reveal-item">
                         <a href=""><img src="images/newbooks/newbooks07.png" alt="newbooks07"></a>
                         <div class="detail">
                             <div class="green-tag">
@@ -303,7 +301,7 @@
                             <a href=""><p class="bookname p1" title="戀愛腦依戀障礙：如何既享受粉紅泡泡，又能尋得理想伴侶？">戀愛腦依戀障礙：如何既享受粉紅泡泡，又能尋得理想伴侶？</p></a>
                         </div>
                     </div>
-                    <div class="col-3 books-list reveal-item">
+                    <div class="col-md-6 col-lg-4 col-3 books-list reveal-item">
                         <a href=""><img src="images/newbooks/newbooks08.png" alt="newbooks08"></a>
                         <div class="detail">
                             <div class="green-tag">
@@ -316,9 +314,7 @@
                             <a href=""><p class="bookname p1" title="人生最後一堂理財課：見證過無數生死的安寧照護醫生告訴你如何過一個不留遺憾的人生。關於金錢、工作和幸福人生的實用建議。">人生最後一堂理財課：見證過無數生死的安寧照護醫生告訴你如何過一個不留遺憾的人生。關於金錢、工作和幸福人生的實用建議。</p></a>
                         </div>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-3 books-list reveal-item">
+                    <div class="col-md-6 col-lg-4 col-3 books-list reveal-item">
                         <a href=""><img src="images/newbooks/newbooks09.png" alt="newbooks09"></a>
                         <div class="detail">
                             <div class="green-tag">
@@ -331,7 +327,7 @@
                             <a href=""><p class="bookname p1">學會從容，人生不慌不忙：擺脫內耗，活出人生的鬆弛感</p></a>
                         </div>
                     </div>
-                    <div class="col-3 books-list reveal-item">
+                    <div class="col-md-6 col-lg-4 col-3 books-list reveal-item">
                         <a href=""><img src="images/newbooks/newbooks10.png" alt="newbooks10"></a>
                         <div class="detail">
                             <div class="green-tag">
@@ -344,7 +340,7 @@
                             <a href=""><p class="bookname p1">遺憾電話亭</p></a>
                         </div>
                     </div>
-                    <div class="col-3 books-list reveal-item">
+                    <div class="col-md-6 col-lg-4 col-3 books-list reveal-item">
                         <a href=""><img src="images/newbooks/newbooks11.png" alt="newbooks11"></a>
                         <div class="detail">
                             <div class="green-tag">
@@ -357,7 +353,7 @@
                             <a href=""><p class="bookname p1">易經——史上最強職場解答之書：64個洞悉工作、財富、交際、身心健康的人生智慧法則</p></a>
                         </div>
                     </div>
-                    <div class="col-3 books-list reveal-item">
+                    <div class="col-md-6 col-lg-4 col-3 books-list reveal-item">
                         <a href=""><img src="images/newbooks/newbooks12.png" alt="newbooks12"></a>
                         <div class="detail">
                             <div class="green-tag">
@@ -372,7 +368,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-12 page-btn green reveal-fadein">
+                    <div class="col-12 page-btn green">
                         <span class="btn-sm active">1</span>
                         <span class="btn-sm">2</span>
                         <span class="btn-sm">3</span>
