--- a/search.html
+++ b/search.html
@@ -111,7 +111,7 @@
                             <span></span>
                             <span></span>
                         </div>
-                        <h2 class="h3-ch">導覽服務</h2>
+                        <h2 class="h4-ch">導覽服務</h2>
                         <p class="p2">幫助您快速尋找到您需要的服務內容</p>
                         <div class="col-12 cards-group">
                             <a href="student.html" class="reveal-item">
@@ -261,24 +261,24 @@
                     </div>
                 </div>
                 <div class="row book-list reveal-item">
-                    <div class="col-2">
+                    <div class="col-sm-12 col-md-4 col-xl-3 col-2">
                         <img src="images/books/books01.png" alt="books01">
                     </div>
-                    <div class="col-10">
-                            <h5 class="h5-ch"><a href="books-detail.html">HTML / CSS / JavaScript與前端框架完美結合 : 使用Bootstrap與PWA技術, 新手從這開始!</a></h5>
-                            <div class="detail">
-                                <p class="p2">作者 / 陳婉凌著</p>
-                                <p class="p2">出版者 / 博碩文化</p>
-                                <p class="p2">出版年 / 2025</p>
-                                <p class="p2">索書號 / 312.1695</p>   
-                            </div>
-                            <div class="book tag">
-                                <span class="btn-sm">HTML(文件標記語言)</span>
-                                <span class="btn-sm">CSS(電腦程式語言)</span>
-                                <span class="btn-sm">Java Script(電腦程式語言)</span>
-                                <span class="btn-sm">網頁設計</span>
-                                <span class="btn-sm">全球資訊網</span>
-                            </div>
+                    <div class="col-sm-12 col-md-8 col-xl-9 col-10">
+                        <h4 class="h4-ch"><a href="books-detail.html">HTML / CSS / JavaScript與前端框架完美結合 : 使用Bootstrap與PWA技術, 新手從這開始!</a></h4>
+                        <div class="detail">
+                            <p class="p2">作者 / 陳婉凌著</p>
+                            <p class="p2">出版者 / 博碩文化</p>
+                            <p class="p2">出版年 / 2025</p>
+                            <p class="p2">索書號 / 312.1695</p>   
+                        </div>
+                        <div class="book tag">
+                            <span class="btn-sm">HTML(文件標記語言)</span>
+                            <span class="btn-sm">CSS(電腦程式語言)</span>
+                            <span class="btn-sm">Java Script(電腦程式語言)</span>
+                            <span class="btn-sm">網頁設計</span>
+                            <span class="btn-sm">全球資訊網</span>
+                        </div>
                         
                         <div class="btn-group">
                             <a href="#" class="little-btn gray">無可利用館藏</a>
@@ -294,11 +294,11 @@
                     </div>
                 </div>
                 <div class="row book-list reveal-item">
-                    <div class="col-2">
+                    <div class="col-sm-12 col-md-4 col-xl-3 col-2">
                         <img src="images/books/books02.png" alt="books02">
                     </div>
-                    <div class="col-10">
-                        <h5 class="h5-ch"><a href="">原生全端開發 : 使用Node.js建立最漂亮強大的網站</a></h5>
+                    <div class="col-sm-12 col-md-8 col-xl-9 col-10">
+                        <h4 class="h4-ch"><a href="">原生全端開發 : 使用Node.js建立最漂亮強大的網站</a></h4>
                         
                         <div class="detail">
                             <p class="p2">作者 / 潘成均作</p>
@@ -325,11 +325,11 @@
                     </div>
                 </div>
                 <div class="row book-list reveal-item">
-                    <div class="col-2">
+                    <div class="col-sm-12 col-md-4 col-xl-3 col-2">
                         <img src="images/books/books03.png" alt="books03">
                     </div>
-                    <div class="col-10">
-                        <h5 class="h5-ch"><a href="">不會寫程式也能創立個人品牌和變現 : 快速打造你的數位助理, 建立結帳系統, 多管道同步推廣品牌</a></h5>
+                    <div class="col-sm-12 col-md-8 col-xl-9 col-10">
+                        <h4 class="h4-ch"><a href="">不會寫程式也能創立個人品牌和變現 : 快速打造你的數位助理, 建立結帳系統, 多管道同步推廣品牌</a></h4>
                         <div class="detail">
                             <p class="p2">作者 / 鄭緯筌(Vista Cheng)著</p>
                             <p class="p2">出版者 / 真文化出版遠足文化發行</p>
@@ -357,11 +357,11 @@
                     </div>
                 </div>
                 <div class="row book-list reveal-item">
-                    <div class="col-2">
+                    <div class="col-sm-12 col-md-4 col-xl-3 col-2">
                         <img src="images/books/books04.png" alt="books04">
                     </div>
-                    <div class="col-10">
-                        <h5 class="h5-ch"><a href="">遙遙領先 : 使用Java開發Web新手轉高手之路</a></h5>
+                    <div class="col-sm-12 col-md-8 col-xl-9 col-10">
+                        <h4 class="h4-ch"><a href="">遙遙領先 : 使用Java開發Web新手轉高手之路</a></h4>
                         <div class="detail">
                             <p class="p2">作者 / 王樹生著</p>
                             <p class="p2">出版者 / 深智數位</p>
@@ -387,11 +387,11 @@
                     </div>
                 </div>
                 <div class="row book-list reveal-item">
-                    <div class="col-2">
+                    <div class="col-sm-12 col-md-4 col-xl-3 col-2">
                         <img src="images/books/books05.png" alt="books05">
                     </div>
-                    <div class="col-10">
-                        <h5 class="h5-ch"><a href="">全端網站開發筆記 : 活用MERN技術, 打造制霸全球的動態網站, 開創六位數被動收入!</a></h5>
+                    <div class="col-sm-12 col-md-8 col-xl-9 col-10">
+                        <h4 class="h4-ch"><a href="">全端網站開發筆記 : 活用MERN技術, 打造制霸全球的動態網站, 開創六位數被動收入!</a></h4>
                         <div class="detail">
                             <p class="p2">作者 / 柯昱丞(Ko)著</p>
                             <p class="p2">出版者 / 博碩文化</p>
