--- a/senior.html
+++ b/senior.html
@@ -169,7 +169,7 @@
         <section class="title-area purple">
             <div class="container">
                 <div class="row">
-                    <div class="col-8 reveal-item">
+                    <div class="col-sm-12 col-md-12 col-8 reveal-item">
                         <span class="h1-eg-medium">Senior Learning</span>
                         <h1 class="h1-ch">樂齡學習專區</h1>
                         <div class="bread">
@@ -180,7 +180,7 @@
                             <span class="purple p2">樂齡學習專區</span>
                         </div>
                     </div>
-                    <div class="col-4">
+                    <div class="col-sm-12 col-md-12 col-4">
                         <div class="text-overlay reveal-fadein">
                             <h5 class="h5-ch-medium">學習沒有年齡限制</h5>
                             <div class="line"></div>
@@ -189,23 +189,23 @@
                     </div>
                 </div>
             </div>
-            <img src="images/bg/tour-guide-purple01.png" alt="tour-guide-purple">
+            <img src="images/bg/tour-guide-purple01-1.png" alt="tour-guide-purple" class="tour-guide-purple-bg">
         </section>
     </header>
     <main>
         <section class="label">
+            <img src="images/bg/tour-guide-purple01-2.png" alt="tour-guide-purple" class="tour-guide-purple-bg">
             <div class="container">
                 <div class="row">
-                    <div class="col-12">
-                        <div class="label-btn purple active reveal-item"><span class="material-symbols-outlined ">book_3</span>樂活好書</div>
-                        <div class="label-btn purple reveal-item"><span class="material-symbols-outlined">medical_services</span>醫療保健</div>
-                        <div class="label-btn purple reveal-item"><span class="material-symbols-outlined">face_4</span>樂齡學習</div>
-                        <div class="label-btn purple reveal-item"><span class="material-symbols-outlined">wall_art</span>展覽活動</div>
-                    </div>
+                    <div class="label-btn purple active reveal-item"><span class="material-symbols-outlined ">book_3</span>樂活好書</div>
+                    <div class="label-btn purple reveal-item"><span class="material-symbols-outlined">medical_services</span>醫療保健</div>
+                    <div class="label-btn purple reveal-item"><span class="material-symbols-outlined">face_4</span>樂齡學習</div>
+                    <div class="label-btn purple reveal-item"><span class="material-symbols-outlined">wall_art</span>展覽活動</div>
                 </div>
             </div>
         </section>
         <section class="content-wrapper">
+            <img src="images/bg/tour-guide-purple01-3.png" alt="tour-guide-purple" class="tour-guide-purple-bg">
             <!-- 頁面一 樂活好書 -->
             <div class="container outer-frame purple good-books">
                 <div class="row">
@@ -219,7 +219,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-3 books-list reveal-item">
+                    <div class="col-md-6 col-lg-4 col-3 books-list reveal-item">
                         <img src="images/books/senior-learning-books01.png" alt="senior-learning-books01">
                         <div class="detail">
                             <div class="green-tag">
@@ -232,7 +232,7 @@
                             <a href=""><p class="bookname p1" title="一個人的京都晚餐 : 在地京都人真愛50味">一個人的京都晚餐 : 在地京都人真愛50味</p></a>
                         </div>
                     </div>
-                    <div class="col-3 books-list reveal-item">
+                    <div class="col-md-6 col-lg-4 col-3 books-list reveal-item">
                         <img src="images/books/senior-learning-books02.png" alt="senior-learning-books02">
                         <div class="detail">
                             <div class="green-tag">
@@ -245,7 +245,7 @@
                             <a href=""><p class="bookname p1" title="太初有茶 : 與茶對話三十年">太初有茶 : 與茶對話三十年</p></a>
                         </div>
                     </div>
-                    <div class="col-3 books-list reveal-item">
+                    <div class="col-md-6 col-lg-4 col-3 books-list reveal-item">
                         <img src="images/books/senior-learning-books03.png" alt="senior-learning-books03">
                         <div class="detail">
                             <div class="green-tag">
@@ -258,7 +258,7 @@
                             <a href=""><p class="bookname p1" title="「立志做小」的農夫CEO：有機小農的創新營運模式，把一畝田，行銷全世界的共好經濟學">「立志做小」的農夫CEO：有機小農的創新營運模式，把一畝田，行銷全世界的共好經濟學</p></a>
                         </div>
                     </div>
-                    <div class="col-3 books-list reveal-item">
+                    <div class="col-md-6 col-lg-4 col-3 books-list reveal-item">
                         <img src="images/books/senior-learning-books04.png" alt="senior-learning-books04">
                         <div class="detail">
                             <div class="green-tag">
@@ -271,9 +271,7 @@
                             <a href=""><p class="bookname p1" title="東京運將">東京運將</p></a>
                         </div>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-3 books-list reveal-item">
+                    <div class="col-md-6 col-lg-4 col-3 books-list reveal-item">
                         <img src="images/books/senior-learning-books05.png" alt="senior-learning-books05">
                         <div class="detail">
                             <div class="green-tag">
@@ -286,7 +284,7 @@
                             <a href=""><p class="bookname p1" title="老屋新生創業學：就愛老空間的跨時代魅力，從企劃、定位、設計到經營，14堂老屋創業築夢必修課">老屋新生創業學：就愛老空間的跨時代魅力，從企劃、定位、設計到經營，14堂老屋創業築夢必修課</p></a>
                         </div>
                     </div>
-                    <div class="col-3 books-list reveal-item">
+                    <div class="col-md-6 col-lg-4 col-3 books-list reveal-item">
                         <img src="images/books/senior-learning-books06.png" alt="senior-learning-books06">
                         <div class="detail">
                             <div class="green-tag">
@@ -299,7 +297,7 @@
                             <a href=""><p class="bookname p1" title="輕鬆作超好吃の日式素料理 : 50道經典和風素食食譜">輕鬆作超好吃の日式素料理 : 50道經典和風素食食譜</p></a>
                         </div>
                     </div>
-                    <div class="col-3 books-list reveal-item">
+                    <div class="col-md-6 col-lg-4 col-3 books-list reveal-item">
                         <img src="images/books/senior-learning-books07.png" alt="senior-learning-books07">
                         <div class="detail">
                             <div class="green-tag">
@@ -312,7 +310,7 @@
                             <a href=""><p class="bookname p1" title="崇拜京都：秒懂！千年古都背後的神祇文化、歷史與民俗行事">崇拜京都：秒懂！千年古都背後的神祇文化、歷史與民俗行事</p></a>
                         </div>
                     </div>
-                    <div class="col-3 books-list reveal-item">
+                    <div class="col-md-6 col-lg-4 col-3 books-list reveal-item">
                         <img src="images/books/senior-learning-books08.png" alt="senior-learning-books08">
                         <div class="detail">
                             <div class="green-tag">
@@ -327,7 +325,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-12 page-btn purple reveal-fadein">
+                    <div class="col-12 page-btn purple">
                         <span class="btn-sm active">1</span>
                         <span class="btn-sm">2</span>
                         <span class="btn-sm">3</span>
@@ -817,7 +815,6 @@
                     </div>
                 </div>
             </div>
-            <img src="images/bg/tour-guide-purple02.png" alt="tour-guide-purple">
         </section>
     </main>
     <footer>
