--- a/student.html
+++ b/student.html
@@ -166,10 +166,10 @@
                     </div>
                 </div>
         </section>
-        <section class="title-area pink">
+        <section class="title-area pink student-page">
             <div class="container">
                 <div class="row">
-                    <div class="col-8 reveal-item">
+                    <div class="col-sm-12 col-md-12 col-8 reveal-item">
                         <span class="h1-eg-medium">Kid & Teenager</span>
                         <h1 class="h1-ch">兒童與青少年專區</h1>
                         <div class="bread">
@@ -180,7 +180,7 @@
                             <span class="pink p2">兒童與青少年專區</span>
                         </div>
                     </div>
-                    <div class="col-4">
+                    <div class="col-sm-12 col-md-12 col-4">
                         <div class="text-overlay reveal-fadein">
                             <h5 class="h5-ch-medium">探索世界的最佳起點</h5>
                             <div class="line"></div>
@@ -189,28 +189,39 @@
                     </div>
                 </div>
             </div>
-            <img src="images/bg/tour-guide-pink01.png" alt="tour-guide-pink">
+            <img src="images/bg/tour-guide-pink01-1.png" alt="tour-guide-pink" class="tour-guide-pink-bg">
         </section>
         
     </header>
     <main>
         <section class="label">
+            <img src="images/bg/tour-guide-pink01-2.png" alt="tour-guide-pink" class="tour-guide-pink-bg">
             <div class="container">
                 <div class="row">
-                    <div class="col-12">
-                        <div class="label-btn pink active reveal-item"><span class="material-symbols-outlined">book_3</span>好書推薦</div>
-                        <div class="label-btn pink reveal-item"><span class="material-symbols-outlined">local_activity</span>主題活動</div>
-                        <div class="label-btn pink reveal-item"><span class="material-symbols-outlined">child_hat</span>親子共讀</div>
-                        <div class="label-btn pink reveal-item"><span class="material-symbols-outlined">emoji_objects</span>學習資源</div>
+                    <div class="label-btn pink active reveal-item">
+                        <span class="material-symbols-outlined">book_3</span>
+                        好書推薦
+                    </div>
+                    <div class="label-btn pink reveal-item">
+                        <span class="material-symbols-outlined">local_activity</span>主題活動
+                    </div>
+                        <div class="label-btn pink reveal-item">
+                            <span class="material-symbols-outlined">child_hat</span>
+                            親子共讀
+                        </div>
+                    <div class="label-btn pink reveal-item">
+                        <span class="material-symbols-outlined">emoji_objects</span>
+                        學習資源
                     </div>
                 </div>
             </div>
         </section>
         <section class="content-wrapper">
+            <img src="images/bg/tour-guide-pink01-3.png" alt="tour-guide-pink" class="tour-guide-pink-bg">
             <!-- 頁面一 好書推薦 -->
             <div class="container outer-frame pink good-books">
                 <div class="row">
-                    <div class="col-12 btn-group pink reveal-item">
+                    <div class="col-12 btn-group pink reveal-fadein">
                         <ul>
                             <li class="active"><button class="btn-sm">全部</button></li>
                             <li><button class="btn-sm">得獎書單</button></li>
@@ -220,7 +231,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-3 books-list reveal-item">
+                    <div class="col-md-6 col-lg-4 col-3 books-list reveal-item">
                         <img src="images/books/student-books01.png" alt="student-books01">
                         <div class="detail">
                             <div class="green-tag">
@@ -233,7 +244,7 @@
                             <a href=""><p class="bookname p1" title="中小學生經濟生活觀察日記：時間和金錢有限，學習做最好的選擇">中小學生經濟生活觀察日記：時間和金錢有限，學習做最好的選擇</p></a>
                         </div>
                     </div>
-                    <div class="col-3 books-list reveal-item">
+                    <div class="col-md-6 col-lg-4 col-3 books-list reveal-item">
                         <img src="images/books/student-books02.png" alt="student-books02">
                         <div class="detail">
                             <div class="green-tag">
@@ -246,7 +257,7 @@
                             <a href=""><p class="bookname p1" title="我的同學是一隻熊">我的同學是一隻熊</p></a>
                         </div>
                     </div>
-                    <div class="col-3 books-list reveal-item">
+                    <div class="col-md-6 col-lg-4 col-3 books-list reveal-item">
                         <img src="images/books/student-books03.png" alt="student-books03">
                         <div class="detail">
                             <div class="green-tag">
@@ -259,7 +270,7 @@
                             <a href=""><p class="bookname p1" title="真相製造：從聖戰士媽媽、極權政府、網軍教練、境外勢力、打假部隊、內容農場主人到政府小編">真相製造：從聖戰士媽媽、極權政府、網軍教練、境外勢力、打假部隊、內容農場主人到政府小編</p></a>
                         </div>
                     </div>
-                    <div class="col-3 books-list reveal-item">
+                    <div class="col-md-6 col-lg-4 col-3 books-list reveal-item">
                         <img src="images/books/student-books04.png" alt="student-books04">
                         <div class="detail">
                             <div class="green-tag">
@@ -272,9 +283,7 @@
                             <a href=""><p class="bookname p1" title="神在的地方：一個與雪同行的夏天">神在的地方：一個與雪同行的夏天</p></a>
                         </div>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-3 books-list reveal-item">
+                    <div class="col-md-6 col-lg-4 col-3 books-list reveal-item">
                         <img src="images/books/student-books05.png" alt="student-books05">
                         <div class="detail">
                             <div class="green-tag">
@@ -287,7 +296,7 @@
                             <a href=""><p class="bookname p1" title="神在的地方：一個與雪同行的夏天">神在的地方：一個與雪同行的夏天</p></a>
                         </div>
                     </div>
-                    <div class="col-3 books-list reveal-item">
+                    <div class="col-md-6 col-lg-4 col-3 books-list reveal-item">
                         <img src="images/books/student-books06.png" alt="student-books06">
                         <div class="detail">
                             <div class="green-tag">
@@ -300,7 +309,7 @@
                             <a href=""><p class="bookname p1" title="親愛的共犯">親愛的共犯</p></a>
                         </div>
                     </div>
-                    <div class="col-3 books-list reveal-item">
+                    <div class="col-md-6 col-lg-4 col-3 books-list reveal-item">
                         <img src="images/books/student-books07.png" alt="student-books07">
                         <div class="detail">
                             <div class="green-tag">
@@ -313,7 +322,7 @@
                             <a href=""><p class="bookname p1" title="零度分離">零度分離</p></a>
                         </div>
                     </div>
-                    <div class="col-3 books-list reveal-item">
+                    <div class="col-md-6 col-lg-4 col-3 books-list reveal-item">
                         <img src="images/books/student-books08.png" alt="student-books08">
                         <div class="detail">
                             <div class="green-tag">
@@ -328,7 +337,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-12 page-btn pink reveal-fadein">
+                    <div class="col-12 page-btn pink">
                         <span class="btn-sm active">1</span>
                         <span class="btn-sm">2</span>
                         <span class="btn-sm">3</span>
@@ -862,7 +871,6 @@
                     </div>
                 </div>
             </div>
-            <img src="images/bg/tour-guide-pink02.png" alt="tour-guide-pink">
         </section>
     </main>
     <footer>
@@ -904,7 +912,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="col-lg-12 col-3">
+                <div class="col-lg-12 col-md-6 col-lg-4  col-3">
                     <div class="info">
                         <p class="p2">公共圖書館</p>
                         <p class="p2">通訊地址：新竹縣竹北市智惠街888號</p>
