--- a/activity.html
+++ b/activity.html
@@ -170,7 +170,7 @@
         <section class="title-area green activity-page">
             <div class="container">
                 <div class="row">
-                    <div class="col-sm-12 col-md-7 col-8 reveal-item">
+                    <div class="col-md-12 col-8 reveal-item">
                         <span class="h1-eg-medium">Activity</span>
                         <h1 class="h1-ch">活動總覽</h1>
                         <div class="bread">
@@ -179,7 +179,7 @@
                             <span class="green p2">活動總覽</span>
                         </div>
                     </div>
-                    <div class="col-sm-12 col-md-5 col-4">
+                    <div class="col-md-12 col-4">
                         <div class="text-overlay reveal-fadein">
                             <h5 class="h5-ch-medium">定期優質活動</h5>
                             <div class="line"></div>
@@ -207,7 +207,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-12 col-md-6 col-4">
+                    <div class="col-sm-12 col-lg-6 col-4">
                         <div class="card purple reveal-item">
                             <div class="card-mask">
                                 <div class="detail">
@@ -231,11 +231,10 @@
                                     <h5 class="title h5-ch-medium">「手心的溫暖」樂齡手機攝影展</h5>
                                     <p  class="p2">展示長者手機拍攝的精彩作品，並進行交流分享與導覽。歡迎參觀。</p>
                                 </div>
-                                <!-- <a class="btn-mid-bold"  style="line-height: 120%;">線上<br>報名</a> -->
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-12 col-md-6 col-4">
+                    <div class="col-sm-12 col-lg-6 col-4">
                         <div class="card pink reveal-item">
                             <div class="card-mask">
                                 <div class="detail">
@@ -262,7 +261,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-12 col-md-6 col-4">
+                    <div class="col-sm-12 col-lg-6 col-4">
                         <div class="card purple reveal-item">
                             <div class="card-mask">
                                 <div class="detail">
@@ -289,7 +288,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-12 col-md-6 col-4">
+                    <div class="col-sm-12 col-lg-6 col-4">
                         <div class="card purple reveal-item">
                             <div class="card-mask">
                                 <div class="detail">
@@ -315,7 +314,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-12 col-md-6 col-4">
+                    <div class="col-sm-12 col-lg-6 col-4">
                         <div class="card pink reveal-item">
                             <div class="card-mask">
                                 <div class="detail">
@@ -342,7 +341,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-12 col-md-6 col-4">
+                    <div class="col-sm-12 col-lg-6 col-4">
                         <div class="card pink reveal-item">
                             <div class="card-mask">
                                 <div class="detail">
@@ -371,7 +370,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-12 page-btn green reveal-fadein">
+                    <div class="col-12 page-btn green">
                         <span class="btn-sm active">1</span>
                         <span class="btn-sm">2</span>
                         <span class="btn-sm">3</span>
